# lincoln-project

./: .dockerignore  .env.example  .gitignore  .mcp.json  .tool-versions  HANDOFF.md  LEARNINGS.md  Makefile  README.md  docker-compose.yml  lincoln-cognitive-state.md  writeup.md
.sisyphus/: boulder.json
.sisyphus/notepads/lincoln-substrate/: learnings.md
.sisyphus/plans/: lincoln-child-thoughts.md  lincoln-interruption.md  lincoln-metrics.md  lincoln-narrative.md  lincoln-selfmodel.md  lincoln-substrate.md  lincoln-thoughts.md  lincoln-tom.md
apps/lincoln/: .dockerignore  .gitignore  Dockerfile  README.md  mix.exs
apps/lincoln/assets/css/: app.css
apps/lincoln/assets/js/: app.js
apps/lincoln/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/lincoln/lib/: lincoln.ex  lincoln_web.ex
apps/lincoln/lib/lincoln/: actions.ex  agents.ex  application.ex  autonomy.ex  beliefs.ex  benchmarks.ex  cognition.ex  conversation.ex  goals.ex  mailer.ex  memory.ex  narratives.ex  perception.ex  pub_sub.ex  questions.ex  repo.ex  self_awareness.ex  self_model.ex  substrate.ex  user_models.ex
apps/lincoln/lib/lincoln_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
apps/lincoln/priv/repo/: seeds.exs
apps/lincoln/test/: test_helper.exs
apps/lincoln/test/lincoln/: actions_test.exs  agents_test.exs  beliefs_test.exs  cognition_test.exs  goals_test.exs  memory_test.exs  memory_unprocessed_test.exs  perception_test.exs  (+1 more)
apps/ml_service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
lib/lincoln/learning/: belief_formation.ex
(+174 files in other folders)
